# raspicam

examples/FaceDetect/: CMakeLists.txt  FaceDetect.cpp  README.md
examples/FaceDetect/include/: VariousConf.h  VariousDisplay.h
examples/FaceDetect/src/: FaceDetect.cpp  VariousConf.cpp  VariousDisplay.cpp
examples/MotionDetect/: CMakeLists.txt
examples/MotionDetect/include/: Backgroundsub.h  ImageControl.h  VariousConf.h
examples/MotionDetect/scripts/: notify.sh
examples/MotionDetect/src/: Backgroundsub.cpp  ImageControl.cpp  MotionDetect.cpp  VariousConf.cpp
examples/ObjectDetect/: CMakeLists.txt  README.md
examples/ObjectDetect/include/: VariousConf.h  VariousDisplay.h
examples/ObjectDetect/src/: ObjectDetect.cpp  VariousConf.cpp  VariousDisplay.cpp
examples/simpletest_raspicam/: simpletest_raspicam.cpp
examples/simpletest_raspicam_cv/: CMakeLists.txt  simpletest_raspicam_cv.cpp
