cmake_minimum_required (VERSION 2.8) 
project (FaceDetect)
include_directories(./include)
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
	MESSAGE(STATUS "COMPILING OPENCV TESTS")
	add_executable (FaceDetect src/FaceDetect.cpp src/VariousConf.cpp src/VariousDisplay.cpp) 
	target_link_libraries (FaceDetect ${raspicam_CV_LIBS})
ELSE()
	MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
