cmake_minimum_required (VERSION 2.8) 
project (MotionDetect)
include_directories(./include)
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
	MESSAGE(STATUS "COMPILING OPENCV TESTS")
	add_executable (MotionDetect src/MotionDetect.cpp src/VariousConf.cpp src/Backgroundsub.cpp src/ImageControl.cpp) 
	target_link_libraries (MotionDetect ${raspicam_CV_LIBS})
ELSE()
	MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
